examples/test/testpolicy10568.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10568
  namespace: namespace140
spec:
  podSelector:
    matchLabels:
      key9: value19
      key16: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value23
          key38: value2
      podSelector:
        matchLabels:
          key12: value41
